<resources>
    <string name="app_name">Activity_2</string>
    <string name="player_health_100">Player Health: 100</string>
    <string name="rpg_turn_based_game">RPG Turn-Based Game</string>
    <string name="enemy_health_100">Enemy Health: 100</string>
    <string name="attack">Attack</string>
    <string name="defend">Defend</string>
    <string name="heal">Heal</string>
    <string name="attack_label">ATTACK</string>
    <string name="defend_label">DEFEND</string>
    <string name="heal_label">HEAL</string>
</resources>