<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/actionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/hare"
        android:text="@string/rpg_turn_based_game"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/heroEnemyLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/heroEnemyLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/buttonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actionText">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/playerImage"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/greenborder"
                android:src="@drawable/player" />

            <TextView
                android:id="@+id/playerHealth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/player_health_100"
                android:textAlignment="center"
                android:textSize="30sp"
                android:fontFamily="@font/bnt"
                android:textColor="@color/green"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/enemyImage"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/redborder"
                android:src="@drawable/enemy"/>

            <TextView
                android:id="@+id/enemyHealth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/enemy_health_100"
                android:textAlignment="center"
                android:textSize="30sp"
                android:fontFamily="@font/bnt"
                android:textColor="@color/red"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/attackButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_states"
                android:contentDescription="@string/attack"
                android:scaleType="fitCenter"
                android:src="@drawable/attack" />

            <TextView
                android:id="@+id/attackText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/hare"
                android:gravity="center"
                android:text="@string/attack_label"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/defendButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_states"
                android:contentDescription="@string/defend"
                android:scaleType="fitCenter"
                android:src="@drawable/defend" />

            <TextView
                android:id="@+id/defendText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/hare"
                android:gravity="center"
                android:text="@string/defend_label"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/healButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="30dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/heal"
                android:src="@drawable/heal"
                android:background="@drawable/button_states"/>

            <TextView
                android:id="@+id/healText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heal_label"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:fontFamily="@font/hare"
                android:textSize="25sp"
                android:layout_marginBottom="80dp"
                android:textColor="@color/white"
                android:layout_marginEnd="15dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
